--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "js-cookie": "^2.2.1",
     "less": "^4.1.0",
     "less-loader": "^4.0.1",
+    "vant": "^2.12.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
